--- a/web/Views/Shared/_Layout.cshtml
+++ b/web/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            @Html.ActionLink("Carros", "Index", "Carro", null, new { @class = "nav-link text-dark" })
+                            @Html.ActionLink("Veículos", "Index", "Veiculo", null, new { @class = "nav-link text-dark" })
                         </li>
                         <li class="nav-item">
                             @Html.ActionLink("Países", "Index", "Pais", null, new { @class = "nav-link text-dark" })
