--- a/web/Views/Pais/Index.cshtml
+++ b/web/Views/Pais/Index.cshtml
@@ -1,8 +1,6 @@
-﻿
-
-@model IEnumerable<Backend.Pais>
+﻿@model IEnumerable<Backend.Pais>
 @{
-    //var paises = new Backend.PaisRepositorio().ListarTodos();
+		//var paises = new Backend.PaisRepositorio().ListarTodos();
 }
 
 <h1>Países</h1>
@@ -11,26 +9,21 @@
 @Html.ActionLink("Cadastrar","Create","Pais",null, new {@class = "btn btn-primary" })
 
 <table class="table table-responsive mt-3">
-    <tr>
-        <th>Id</th>
-        <th>Nome</th>
-        <th></th>
-    </tr>
-    @foreach (var pais in Model)
-    {
-        <tr>
-            <td>@pais.Id</td>
-            <td>@pais.Nome</td>
-            <td>
-                @Html.ActionLink("Editar", "Edit", new { id = pais.Id })
-                @if (!pais.Marcas.Any())
-                {
-                    @Html.ActionLink("Excluir", "Delete", new { id = pais.Id }, new { onclick = "return confirm('Deseja realmente excluir?');" })
-                }
-
-
-            </td>
-        </tr>
-    }
+	<tr>
+		<th>Id</th>
+		<th>Nome</th>
+		<th></th>
+	</tr>
+	@foreach (var pais in Model) {
+	<tr>
+		<td>@pais.id</td>
+		<td>@pais.nome</td>
+		<td>
+			@Html.ActionLink("Editar", "Edit", new { id = pais.id })
+			@if (!pais.marcas.Any()){
+				@Html.ActionLink("Excluir", "Delete", new { id = pais.id }, new { onclick = "return confirm('Deseja realmente excluir?');" })
+			}
+		</td>
+	</tr>
+	}
 </table>
-
