--- a/web/Views/Marca/Create.cshtml
+++ b/web/Views/Marca/Create.cshtml
@@ -19,7 +19,7 @@
   </div>
   <div class="form-group">
     @Html.Label("Origem")
-    @Html.DropDownList("IdPais", ViewBag.selectPaises , "selecione", new { @class = "form-control" })
+    @Html.DropDownList("idPais", ViewBag.selectPaises , "selecione", new { @class = "form-control" })
   </div>
 
   <input type="submit" value="Salvar" class="btn btn-primary" />
