--- a/web/Views/Shared/_Layout.cshtml
+++ b/web/Views/Shared/_Layout.cshtml
@@ -1,54 +1,80 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Treinamento .NET</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>@ViewData["Title"] - Treinamento .NET</title>
+	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">TreinamentoWebApp</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            @Html.ActionLink("Veículos", "Index", "Veiculo", null, new { @class = "nav-link text-dark" })
-                        </li>
-                        <li class="nav-item">
-                            @Html.ActionLink("Países", "Index", "Pais", null, new { @class = "nav-link text-dark" })
-                        </li>
-                        <li class="nav-item">
-                            @Html.ActionLink("Marcas", "Index", "Marca", null, new { @class = "nav-link text-dark" })
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
+	<header>
+		<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+			<div class="container">
+				<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">TreinamentoWebApp</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+								aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+					<ul class="navbar-nav flex-grow-1">
+						<li class="nav-item">
+							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+						</li>
+						<li class="nav-item">
+							@Html.ActionLink("Veículos", "Index", "Veiculo", null, new { @class = "nav-link text-dark" })
+						</li>
+						<li class="nav-item">
+							@Html.ActionLink("Países", "Index", "Pais", null, new { @class = "nav-link text-dark" })
+						</li>
+						<li class="nav-item">
+							@Html.ActionLink("Marcas", "Index", "Marca", null, new { @class = "nav-link text-dark" })
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</header>
+		<div class="container">
+			<main role="main" class="pb-3">
+				@RenderBody()
+			</main>
+		</div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2021 - TreinamentoWebApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+		<footer class="border-top footer text-muted">
+			<div class="container">
+				&copy; 2021 - TreinamentoWebApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+			</div>
+		</footer>
+		<script src="~/lib/jquery/dist/jquery.min.js"></script>
+		<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+		<script src="~/js/site.js" asp-append-version="true"></script>
+		<script>
+		setTimeout(function () {
+			// dotnet-watch browser reload script
+			let connection;
+			try {
+				connection = new WebSocket('ws://127.0.0.1:63435');
+			} catch (ex) {
+				console.debug(ex);
+				return;
+			}
+			connection.onmessage = function (message) {
+				if (message.data === 'Reload') {
+					console.debug('Server is ready. Reloading...');
+					location.reload();
+				} else if (message.data === 'Wait') {
+					console.debug('File changes detected. Waiting for application to rebuild.');
+					const t = document.title; const r = ['☱', '☲', '☴']; let i = 0;
+					setInterval(function () { document.title = r[i++ % r.length] + ' ' + t; }, 240);
+				}
+			}
+			connection.onerror = function (event) { console.debug('dotnet-watch reload socket error.', event) }
+			connection.onclose = function () { console.debug('dotnet-watch reload socket closed.') }
+			connection.onopen = function () { console.debug('dotnet-watch reload socket connected.') }
+		}, 500);
+</script>
+
+	@await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
